--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 # This file lists all individuals having contributed content to the repository.
 
-
+kerols zaki <justbegintoday@gmail.com>
 med morad <moradmed1@gmail.com>
- <@.com> 
+
